--- a/ios/Podfile
+++ b/ios/Podfile
@@ -12,6 +12,8 @@ target 'CamScan' do
     :hermes_enabled => false
   )
 
+  pod 'react-native-camera', :path => '../node_modules/react-native-camera'
+
   target 'CamScanTests' do
     inherit! :complete
     # Pods for testing
