--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@react-navigation/stack": "^6.0.1",
     "react": "17.0.1",
     "react-native": "0.64.2",
+    "react-native-camera": "^4.0.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-picker": "^4.0.6",
     "react-native-paper": "^4.9.2",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
