--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native": "0.64.2",
     "react-native-camera": "^4.0.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-crop-picker": "^0.36.2",
     "react-native-image-picker": "^4.0.6",
     "react-native-paper": "^4.9.2",
     "react-native-reanimated": "^2.2.0",
