--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-crop-picker": "^0.36.2",
     "react-native-image-picker": "^4.0.6",
+    "react-native-image-to-pdf": "^1.2.0",
     "react-native-paper": "^4.9.2",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
