--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,7 @@
 rootProject.name = 'CamScan'
+include ':rn-fetch-blob'
+project(':rn-fetch-blob').projectDir = new File(rootProject.projectDir, '../node_modules/rn-fetch-blob/android')
+
 include ':react-native-image-to-pdf'
 project(':react-native-image-to-pdf').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-image-to-pdf/android')
 include ':react-native-camera'
