--- a/ios/Podfile
+++ b/ios/Podfile
@@ -16,6 +16,10 @@ target 'CamScan' do
 
   pod 'RNImageToPdf', :path => '../node_modules/react-native-image-to-pdf'
 
+  pod 'react-native-fetch-blob', :path => '../node_modules/react-native-fetch-blob'
+
+  pod 'rn-fetch-blob', :path => '../node_modules/rn-fetch-blob'
+
   target 'CamScanTests' do
     inherit! :complete
     # Pods for testing
