--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-image-picker": "^4.0.6",
     "react-native-image-to-pdf": "^1.2.0",
     "react-native-paper": "^4.9.2",
+    "react-native-pdf-thumbnail": "^1.0.2",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
